# qml-fraud-detection-benchmark

./: .gitignore  LICENSE  MAC_MINI_HANDOFF.md  MAC_MINI_PARALLEL_ABLATION.md  README.md  generate_plots.py  pyproject.toml  requirements.txt  run_ablation.py  run_benchmark.py  run_latency.py  run_noise.py  run_noise_parallel.sh  run_noise_queue.sh  run_noise_watcher.sh
notebooks/: 02_noise_sweep_results.ipynb
results/noise/p0.0/: noise_results.json
results/noise/p0.001/: noise_results.json
results/noise/p0.005/: noise_results.json
results/noise/p0.01/: noise_results.json
results/noise/p0.02/: noise_results.json
results/noise/p0.02_vqc/: noise_results.json
results/noise/p0.05/: noise_results.json
results/noise/p0.05_vqc/: noise_results.json
src/: classical_models.py  data_loader.py  evaluation.py  preprocessing.py  quantum_models.py
tests/: test_ablation.py  test_classical_models.py  test_evaluation.py  test_generate_plots.py  test_latency.py  test_noise.py  test_preprocessing.py  test_quantum_models.py
