[project]
authors = [{name = "g8rdier", email = "gregor.kobilarov@gmail.com"}]
dependencies = []
name = "qml-fraud-detection-benchmark"
requires-python = ">=3.12,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.12,<3.13"
numpy = ">=1.24"
pandas = ">=2.0"
scipy = ">=1.11"
scikit-learn = ">=1.3"
xgboost = ">=2.0"
imbalanced-learn = ">=0.11"
pennylane = ">=0.36"
pennylane-lightning = ">=0.36"
matplotlib = ">=3.7"
seaborn = ">=0.13"
jupyter = ">=1.0"
ipykernel = ">=6.0"
joblib = ">=1.3"
tqdm = ">=4.66"
pyyaml = ">=6.0"
pytest = ">=7.4"
pytest-cov = ">=4.1"

[tool.pixi.pypi-dependencies]
qml_fraud_detection_benchmark = { path = ".", editable = true }

[tool.pixi.tasks]
benchmark = "python run_benchmark.py"
classical = "python run_benchmark.py --classical-only"
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=src --cov-report=term-missing"
